style (landing page): Fixed layout alignement issues

--- a/but-info2-a-sae3-docker-stack-main/sfapp/public/css/landingPage.css
+++ b/but-info2-a-sae3-docker-stack-main/sfapp/public/css/landingPage.css
@@ -14,6 +14,10 @@ h1 {
     margin: 24px;
 }
 
+h2 {
+    font-weight: 650;
+}
+
 input {
     border-radius: 4px;
     padding: 8px 16px;
@@ -34,8 +38,11 @@ button {
     color: white;
     border-radius: 4px;
     border: none;
+    transition: .15s;
 }
 
 button:hover {
-    background-color: #303c46;
+    background-color: #fff;
+    color: #303c46;
+    transition: .15s;
 }
